# Pos-Doc---ACV--OpenLCA-

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml
configs/: example-acidification.yaml  example-climate-change.yaml  raicv-brazil-pmfp.yaml
docs/: anexo-1-manual-do-usuario.md  anexo-2-documentacao-tecnica.md  ecoinvent-matching.md  openlca-import.md  original-script.md  relatorio-pos-doutorado-UFRJ.md  supported-units.md  technical-reference.md
examples/: CF-DALY-Giusti-Flows.xlsx  README.md
latex/: anexo1-manual.tex  anexo2-tecnica.tex  anexo3-comparacao-metodos.tex  capa.tex  main.tex  referencias.tex  relatorio.tex
src/olca_cf_converter/: __init__.py  cli.py  converter.py  schemas.py  validator.py
tests/: test_cli.py  test_converter.py  test_schemas.py  test_validator.py
